better hand/trick points calculation
