# server/main/kotlin/ch/yass/admin/AnalyzeGameService.kt
@@ -6,13 +6,16 @@ import ch.yass.admin.api.analzye.PlayedCardWithPlayer
 import ch.yass.admin.api.analzye.PlayerWithCards
 import ch.yass.admin.api.analzye.TrickWithCards
 import ch.yass.core.error.GameWithCodeNotFound
+import ch.yass.core.helper.associateWithToEnum
 import ch.yass.core.helper.takeWhileInclusive
 import ch.yass.game.GameService
 import ch.yass.game.api.internal.GameState
-import ch.yass.game.dto.Points
+import ch.yass.game.dto.Position
+import ch.yass.game.dto.TotalPoints
 import ch.yass.game.dto.db.Hand
 import ch.yass.game.dto.db.Player
 import ch.yass.game.dto.db.Trick
+import ch.yass.game.dto.sumPointsByPosition
 import ch.yass.game.engine.*
 import ch.yass.admin.api.analzye.Hand as AnalyzeHand
 
@@ -33,27 +36,48 @@ class AnalyzeGameService(private val gameService: GameService) {
     private fun mapHand(hand: Hand, state: GameState): ch.yass.admin.api.analzye.Hand {
         val startingPlayer = playerAtPosition(hand.startingPosition, state.seats, state.allPlayers)
         val players = state.allPlayers.map { mapPlayer(it, hand, state) }.toList()
-        val tricksOfHand = tricksOfHand(state.tricks, hand) // newest trick is index 0
-        val tricks = tricksOfHand.map { mapTrick(it, state, tricksOfHand, hand) }
-        val points = pointsByPositionTotal(listOf(hand), completeTricksOfHand(state.tricks, hand))
+        var details = handTricksWithPoints(listOf(hand), state.tricks)
+
+        val weisPoints = weisPointsByPositionTotal(listOf(hand), state.tricks)
+        val cardPoints = details.sumPointsByPosition()
+        val points = Position.entries
+            .associateWithToEnum { TotalPoints(cardPoints.getValue(it), weisPoints.getValue(it)) }
+
+        val tricks = details.first().tricks.map { trickDetail ->
+            val winnerPlayer = playerAtPosition(trickDetail.winner, state.seats, state.allPlayers)
+            val leadPlayer = playerAtPosition(trickDetail.lead, state.seats, state.allPlayers)
+            val cards = positionsOrderedWithStart(trickDetail.lead).map {
+                PlayedCardWithPlayer(playerAtPosition(it, state.seats, state.allPlayers), trickDetail.trick.cardOf(it))
+            }
+            TrickWithCards(
+                cards,
+                leadPlayer,
+                trickDetail.trick.cardOf(trickDetail.lead)?.suit,
+                winnerPlayer,
+                trickDetail.points
+            )
+        }
+
 
         return AnalyzeHand(hand.trump, hand.gschobe, startingPlayer, players, tricks.reversed(), points)
     }
 
-    private fun mapTrick(trick: Trick, state: GameState, tricksOfHand: List<Trick>, hand: Hand): TrickWithCards {
-        val tricksUptoGivenTrick = tricksOfHand.reversed().takeWhileInclusive { it.id != trick.id }.reversed()
-        val leadPosition = currentLeadPositionOfHand(hand, tricksUptoGivenTrick, state.seats)
-        val leadPlayer = playerAtPosition(leadPosition, state.seats, state.allPlayers)
-        val leadCard = trick.cardOf(leadPosition)
-        val winningPosition = winningPositionOfCurrentTrick(hand, tricksUptoGivenTrick)
-        val winningPlayer = winningPosition?.let { playerAtPosition(winningPosition, state.seats, state.allPlayers) }
-        val cards = positionsOrderedWithStart(leadPosition).map {
-            PlayedCardWithPlayer(playerAtPosition(it, state.seats, state.allPlayers), trick.cardOf(it))
-        }
-        val points = pointsByPositionTotal(listOf(hand), listOf(trick))
-
-        return TrickWithCards(cards, leadPlayer, leadCard?.suit, winningPlayer, points)
-    }
+//    private fun mapTrick(trick: Trick, state: GameState, tricksOfHand: List<Trick>, hand: Hand): TrickWithCards {
+//        val tricksUptoGivenTrick = tricksOfHand.reversed().takeWhileInclusive { it.id != trick.id }.reversed()
+//        val leadPosition = currentLeadPositionOfHand(hand, tricksUptoGivenTrick, state.seats)
+//        val leadPlayer = playerAtPosition(leadPosition, state.seats, state.allPlayers)
+//        val leadCard = trick.cardOf(leadPosition)
+//        val winningPosition = winningPositionOfCurrentTrick(hand, tricksUptoGivenTrick)
+//        val winningPlayer = winningPosition?.let { playerAtPosition(winningPosition, state.seats, state.allPlayers) }
+//        val cards = positionsOrderedWithStart(leadPosition).map {
+//            PlayedCardWithPlayer(playerAtPosition(it, state.seats, state.allPlayers), trick.cardOf(it))
+//        }
+//        val points = pointsByPositionTotal(listOf(hand), listOf(trick))
+//
+////        val cardPoints = handTricksWithPoints(listOf(hand), tricks).sumPointsByPosition()
+//
+//        return TrickWithCards(cards, leadPlayer, leadCard?.suit, winningPlayer, points)
+//    }
 
     private fun mapPlayer(player: Player, hand: Hand, state: GameState): PlayerWithCards {
         val seat = state.seats.first { it.playerId == player.id }
